--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.4.0",
+    "jumbotron": "^0.2.9",
     "react": "^16.7.0",
     "react-bootstrap": "^0.32.4",
     "react-browser-router": "^2.1.2",
