--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     "axios": "^0.18.0",
     "bootstrap": "^3.4.0",
     "jumbotron": "^0.2.9",
-    "react": "^16.7.0",
+    "react": "^16.8.1",
     "react-bootstrap": "^0.32.4",
     "react-browser-router": "^2.1.2",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.1",
     "react-router": "^3.0.5",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "reactstrap": "^7.0.2"
+    "reactstrap": "^7.0.2",
+    "redux": "^4.0.1",
+    "video-react": "^0.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
